objects/Case.object
<CustomObject>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academy</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>AGILE</fullName>
                </value>
                <value>
                    <fullName>Agile Objects</fullName>
                </value>
                <value>
                    <fullName>ALM Integrations</fullName>
                </value>
                <value>
                    <fullName>ALM Intgerations</fullName>
                    <isActive>false</isActive>
                    <label>ALM Intgerations</label>
                </value>
                <value>
                    <fullName>Apex Tests</fullName>
                </value>
                <value>
                    <fullName>CCM-Integrations</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>CLI</fullName>
                </value>
                <value>
                    <fullName>Compliance Hub</fullName>
                </value>
                <value>
                    <fullName>Copado Commit</fullName>
                </value>
                <value>
                    <fullName>Copado Core</fullName>
                </value>
                <value>
                    <fullName>Copado Deploy</fullName>
                </value>
                <value>
                    <fullName>Copado DX</fullName>
                </value>
                <value>
                    <fullName>Copado Git Integration</fullName>
                </value>
                <value>
                    <fullName>Copado Labs Integrations</fullName>
                </value>
                <value>
                    <fullName>Copado Permissioner</fullName>
                </value>
                <value>
                    <fullName>DevOps Analytics</fullName>
                </value>
                <value>
                    <fullName>Environment Management</fullName>
                </value>
                <value>
                    <fullName>General Question</fullName>
                </value>
                <value>
                    <fullName>Heroku Plugin</fullName>
                </value>
                <value>
                    <fullName>Kanban Boards</fullName>
                </value>
                <value>
                    <fullName>Licenses and Features</fullName>
                </value>
                <value>
                    <fullName>Managed Package</fullName>
                </value>
                <value>
                    <fullName>MuleSoft Plugin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pipeline Manager</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Portfolio Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoReplyAge__c</fullName>
        <label>NoReplyAge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Reply_Hours_Temp__c</fullName>
        <label>No Reply Hours Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>Only Opportunities associated to the Account listed on this Case will appear in this lookup.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <inlineHelpText>Provide your Salesforce Organization ID. You can find the value in Salesforce Setup menu, under Company Information.</inlineHelpText>
        <label>Organization Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package Version</label>
        <referenceTo>sfLma__Package_Version__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Core</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>Copado DX</fullName>
                </value>
                <value>
                    <fullName>CCD</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>CCH</fullName>
                </value>
                <value>
                    <fullName>ALM</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CLI</fullName>
                </value>
                <value>
                    <fullName>Vlocity</fullName>
                </value>
                <value>
                    <fullName>Elements</fullName>
                </value>
                <value>
                    <fullName>OwnBackup</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Deployment__c</fullName>
        <inlineHelpText>Is this a production deployment?  Please list the environments that you are deploying from and to in the fields below</inlineHelpText>
        <label>Production Deployment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <label>Requirements</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Scoped_Time_Investment__c</fullName>
        <label>Scoped Time Investment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Org__c</fullName>
        <label>Source Org</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <inlineHelpText>Cancelled or backlog reason logged by the APO Case Manager</inlineHelpText>
        <label>Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Steps_to_Recreate__c</fullName>
        <label>Steps to Recreate</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <defaultValue>&quot;1.&quot; &amp; BR()&amp;
&quot;2.&quot; &amp; BR()&amp;
&quot;3.&quot; &amp; BR()</defaultValue>
        <inlineHelpText>Provide as much details as possible to assist us in reproducing the issue.</inlineHelpText>
        <label>Steps to Reproduce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Module__c</fullName>
        <label>Sub Module</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Module__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Org Credentials</fullName>
                </value>
                <value>
                    <fullName>Git Repositories</fullName>
                </value>
                <value>
                    <fullName>Git Snapshots</fullName>
                </value>
                <value>
                    <fullName>Environments</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Deployments</fullName>
                </value>
                <value>
                    <fullName>User Stories</fullName>
                </value>
                <value>
                    <fullName>Promotions</fullName>
                </value>
                <value>
                    <fullName>User Story Layout</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Sprints</fullName>
                </value>
                <value>
                    <fullName>Kanban Boards</fullName>
                </value>
                <value>
                    <fullName>Epics</fullName>
                </value>
                <value>
                    <fullName>Work Manager</fullName>
                </value>
                <value>
                    <fullName>Releases</fullName>
                </value>
                <value>
                    <fullName>Copado License Manager</fullName>
                </value>
                <value>
                    <fullName>Account Summary</fullName>
                </value>
                <value>
                    <fullName>Test Scripts</fullName>
                </value>
                <value>
                    <fullName>Test Runs</fullName>
                </value>
                <value>
                    <fullName>Selenium Test Cases</fullName>
                </value>
                <value>
                    <fullName>Selenium Test Suites</fullName>
                </value>
                <value>
                    <fullName>Selenium Test Runs</fullName>
                </value>
                <value>
                    <fullName>Selenium test Groups</fullName>
                </value>
                <value>
                    <fullName>Selenium Settings</fullName>
                </value>
                <value>
                    <fullName>Selenium Locators</fullName>
                </value>
                <value>
                    <fullName>DX Operation Panel</fullName>
                </value>
                <value>
                    <fullName>Scratch Orgs</fullName>
                </value>
                <value>
                    <fullName>Packages</fullName>
                </value>
                <value>
                    <fullName>Package Dependencies</fullName>
                </value>
                <value>
                    <fullName>Install Webhook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Agent__c</fullName>
        <description>Support Agent providing the support. This field will be merged in the custom templates.</description>
        <label>Support Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Org__c</fullName>
        <label>Target Org</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Ending__c</fullName>
        <formula>IF(ISPICKVAL(Origin,&apos;Community&apos;), 

&apos;You can reply to this email or click: https://success.copa.do/s/case/&apos; &amp; Id &amp; &apos; to view this case on the Community.&apos;
, 

&apos;You can reply to this email to comment on the case.&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Ending</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Priority__c</fullName>
        <label>User Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blocker</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Timezone__c</fullName>
        <description>Conitans the time zone of user on which the user needs to be contacted.</description>
        <label>User Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Business_Hours__c</fullName>
        <formula>BusinessHours.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Working Business Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Action this Case relates to</inlineHelpText>
        <label>Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score__c</fullName>
        <label>Ebsta Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Counter__c</fullName>
        <label>Gift Budget Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Limit__c</fullName>
        <label>Gift Budget Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Counter__c</fullName>
        <label>Gift Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Number_Limit__c</fullName>
        <label>Gift Number Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>APO_Platform_Support</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>Business_Process__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.APO_Request</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>APO Platform Support</value>
        </filters>
        <label>APO Platform Support</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APO_Platform_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>APO Platform Support</label>
        <queue>APO_Platform_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APO_Request_Prioritization</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.APO_Request</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Needs Requirements,Groomed,Backlog,Prioritized,In progress,Developed,Tested,Deployed</value>
        </filters>
        <label>APO Request Prioritization</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Academy_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Academy Team</label>
        <queue>Academy_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CLOSED</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Academy,Case.Playground,Case.Support_Case</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenSupportCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.COMPANY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Support_Case</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>All Open Support Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_APO_Alliances_Requests</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.APO_Request</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>siqueira,Dodge,Belove,Ludwig,Sutton,Rossi,Ursini,lelliott,Jaunasse,vivek kumar,eddy perez,kehoe</value>
        </filters>
        <label>All APO Alliances Requests</label>
        <sharedTo>
            <role>Director_Alliances</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_APO_Requests</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>User_Story__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.APO_Request</value>
        </filters>
        <label>All APO Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Cases_Internal_View</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CLOSED</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases (Internal View)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases_Internal_View</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Training_And_Playground,Case.Support_Case</value>
        </filters>
        <label>All Open Cases (Internal View)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Resource_Requests_IM</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Date_Resource_Required__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Resource_Request</value>
        </filters>
        <label>All Resource Requests (IM)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Backlog_APO_Requests</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.APO_Request</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Prioritized,In progress,Developed,Tested,Deployed,Completed</value>
        </filters>
        <label>Backlog APO Requests</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSM_Resource_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Resource_Request</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Customer Success Manager</value>
        </filters>
        <label>CSM Resource Requests</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_By_Name</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>startsWith</operation>
            <value>thin</value>
        </filters>
        <label>Created By Name</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>APO_Request</fullName>
        <active>true</active>
        <businessProcess>CRM APO</businessProcess>
        <description>Record Type for APO requests</description>
        <label>APO Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Academy</fullName>
        <active>true</active>
        <businessProcess>Request Process</businessProcess>
        <description>Record Type for Academy Cases</description>
        <label>Academy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Alliances_Request</fullName>
        <active>true</active>
        <businessProcess>Request Process</businessProcess>
        <description>Record Type for Alliance requests</description>
        <label>Alliances Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Study</fullName>
        <active>true</active>
        <businessProcess>Case Study</businessProcess>
        <description>Will be used to track Marketing Case Studies</description>
        <label>Case Study</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Request</fullName>
        <active>true</active>
        <businessProcess>Request Process</businessProcess>
        <description>Record Type for requesting IT Resources</description>
        <label>IT Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_Request</fullName>
        <active>true</active>
        <businessProcess>Request Process</businessProcess>
        <description>Record Type for requesting Legal Resources</description>
        <label>Legal Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Request</fullName>
        <active>true</active>
        <businessProcess>Request Process</businessProcess>
        <description>Record Type for Marketing requests.</description>
        <label>Marketing Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Playground</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <description>Create Playground cases from success community by community users.</description>
        <label>Playground</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resource_Request</fullName>
        <active>true</active>
        <businessProcess>Request Process</businessProcess>
        <description>Record Type for requesting Employee Resources</description>
        <label>Resource Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Case</fullName>
        <active>true</active>
        <businessProcess>Sales Process</businessProcess>
        <description>Record type for sales cases.</description>
        <label>Sales Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Operations</fullName>
        <active>true</active>
        <businessProcess>Request Process</businessProcess>
        <description>Record Type for Sales Operations</description>
        <label>Sales Operations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Security_Request</fullName>
        <active>true</active>
        <businessProcess>Request Process</businessProcess>
        <description>Record Type for Security Requests</description>
        <label>Security Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Case</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <description>Record type for support cases.</description>
        <label>Support Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Investigations</fullName>
        <active>true</active>
        <businessProcess>Request Process</businessProcess>
        <description>Record Type for recording effort spent investigating technical issues.</description>
        <label>Technical Investigations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_And_Playground</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <description>Create Training and Playground cases from success community by community users (CUSTOM Community Guest Login)</description>
        <label>Training And Playground</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>APO_Request_cant_change_owner</fullName>
        <active>true</active>
        <description>Only system administrators and users in the case assignment rule can change the case owner in APO requests (US-0025845)</description>
        <errorConditionFormula>AND
($Setup.APO_Requests__c.Case_Can_Update_Case_Owner__c = false, 
 RecordType.DeveloperName = &apos;APO_Request&apos;, NOT (ISNEW()) )</errorConditionFormula>
        <errorMessage>You can&apos;t edit case owner for APO requests.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Manager_Must_Fill_Out_Status_Reason</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 OR(
 ISPICKVAL(Status,&quot;Canceled&quot;),
 ISPICKVAL(Status, &quot;Backlog&quot;)), 
 ISBLANK( Status_Reason__c ))</errorConditionFormula>
        <errorDisplayField>Status_Reason__c</errorDisplayField>
        <errorMessage>Status Reason must be filled out to select Cancel or Backlog</errorMessage>
    </validationRules>
</CustomObject>